--- a/.scrutinizer.yml
+++ b/.scrutinizer.yml
@@ -15,6 +15,29 @@ filter:
         - 'resources/*'
         - 'config/*'
         - 'web/*'
+build:
+    environment:
+        php: '5.4.10'
+    dependencies:
+        before:
+            - "npm install -g dynalite"
+            - "dynalite --createTableMs 10 --deleteTableMs 10 --updateTableMs 10"
+            - "sleep 5"
+            - "echo \"memory_limit = 1024M\" > ~/.phpenv/versions/$(phpenv global)/etc/conf.d/memory.ini"
+            - "echo \"xdebug.max_nesting_level = 1000\" >> ~/.phpenv/versions/$(phpenv global)/etc/conf.d/xdebug.ini"
+            - "sed -i 's/^;//' ~/.phpenv/versions/$(phpenv global)/etc/conf.d/xdebug.ini"
+            - "cp app/config/parameters.yml.dist app/config/parameters.yml && composer install --dev --prefer-source"
+        override:
+            - true
+    tests:
+        override:
+            -
+                command: php -d memory_limit=256M bin/phpunit --coverage-clover=uniplaces -c app
+                coverage:
+                    file: uniplaces
+                    format: php-clover
+
+
 before_commands:
     - 'composer install --prefer-source'
 checks:
