--- a/composer.json
+++ b/composer.json
@@ -5,8 +5,7 @@
   "description": "Uniplaces' CI config",
   "require": {
       "php": ">=5.3.2",
-      "symfony/process": "2.0.10",
-      "uniplaces/uniplaces-library": "dev-master#95644efe1c269f006ce4826db0122bfdaef4e7d2"
+      "symfony/process": "2.0.10"
   },
   "require-dev": {
     "phpunit/phpunit": "~4",
@@ -19,12 +18,6 @@
     "satooshi/php-coveralls": "dev-master",
     "knplabs/gaufrette": "dev-master"
   },
-  "repositories": [
-      {
-          "type": "vcs",
-          "url": "git@github.com:uniplaces/uniplaces-library.git"
-      }
-  ],
   "autoload": {
     "psr-0": { "": "src/" }
   }
