--- a/config/phpunit/phpunit.xml.dist
+++ b/config/phpunit/phpunit.xml.dist
@@ -3,7 +3,11 @@
 <!-- http://Phpunit.de/manual/current/en/appendixes.configuration.html -->
 <phpunit>
     <listeners>
-        <listener class="\Uniplaces\Phpunit\ScrutinizerCloverListener" file="ci-configs/src/Uniplaces/Phpunit/ScrutinizerCloverListener.php"/>
+        <listener class="\Uniplaces\Phpunit\ScrutinizerCloverListener" file="ci-configs/src/Uniplaces/Phpunit/ScrutinizerCloverListener.php">
+            <arguments>
+                <string>../../doc/clover.xml</string>
+            </arguments>
+        </listener>
     </listeners>
 
     <logging>
