--- a/composer.json
+++ b/composer.json
@@ -9,9 +9,9 @@
   },
   "require-dev": {
     "phpunit/phpunit": "~4",
-    "squizlabs/php_codesniffer": "~1",
-    "phpmd/phpmd": "~1",
-    "pdepend/pdepend": "~1",
+    "squizlabs/php_codesniffer": "~2",
+    "phpmd/phpmd": "~2",
+    "pdepend/pdepend": "~2",
     "sebastian/phpcpd": "~2",
     "mockery/mockery": "0.9.*",
     "phploc/phploc": "2.*",
@@ -19,6 +19,7 @@
     "knplabs/gaufrette": "dev-master"
   },
   "autoload": {
-    "psr-0": { "": "src/" }
+    "psr-0": { "": "src/" },
+    "classmap": ["src/Uniplaces/Phpcs/Uniplaces/"]
   }
 }
