[RFC][NI] setting idle timeout for phpunit + adding condition to phpunit configuration path. scrutinizer complains about variable here. redundancy seems inavoidable

--- a/src/Uniplaces/Scrutinizer/.scrutinizer.yml
+++ b/src/Uniplaces/Scrutinizer/.scrutinizer.yml
@@ -43,7 +43,8 @@ build:
     tests:
         override:
             -
-                command: php -d memory_limit=256M bin/phpunit --coverage-clover=uniplaces -c app
+                command: "if [[ ! -d '/home/scrutinizer/build/app' ]]; then php -d memory_limit=500M bin/phpunit --coverage-clover=uniplaces; else php -d memory_limit=500M bin/phpunit --coverage-clover=uniplaces -c app; fi"
+                idle_timeout: 600
                 coverage:
                     file: uniplaces
                     format: php-clover
