[RFC][NI] excluding testfolders from inspection

--- a/src/Uniplaces/Scrutinizer/.scrutinizer.yml
+++ b/src/Uniplaces/Scrutinizer/.scrutinizer.yml
@@ -8,7 +8,9 @@ filter:
         - 'vendor/*'
         - 'cache/*'
         - 'tests/*'
+        - '*/tests/*'
         - 'Tests/*'
+        - '*/Tests/*'
         - 'bin/*'
         - 'tmp/*'
         - 'vagrant/*'
@@ -116,7 +118,9 @@ tools:
                 - 'vendor/*'
                 - 'cache/*'
                 - 'tests/*'
+                - '*/tests/*'
                 - 'Tests/*'
+                - '*/Tests/*'
                 - 'bin/*'
                 - 'tmp/*'
                 - 'vagrant/*'
