[RFC][NI] adding directory to testsuits

--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -17,8 +17,23 @@
     <testsuites>
         <testsuite name="Project Test Suite">
             <directory>src/Uniplaces/*/Tests</directory>
+            <directory>src/Uniplaces/*/*/*/Tests</directory>
         </testsuite>
     </testsuites>
+
+
+    <listeners>
+        <listener class="PHPUnit\Runner\CleverAndSmart\TestListener">
+            <arguments>
+                <object class="PHPUnit\Runner\CleverAndSmart\Storage\Sqlite3Storage">
+                    <arguments>
+                        <string>/tmp/.phpunit-cas.db</string>
+                    </arguments>
+                </object>
+		<string>error_only</string>
+            </arguments>
+        </listener>
+    </listeners>
 
     <php>
         <server name="KERNEL_DIR" value="app" />
