--- a/src/Uniplaces/Scrutinizer/.scrutinizer.yml
+++ b/src/Uniplaces/Scrutinizer/.scrutinizer.yml
@@ -40,8 +40,7 @@ build:
         override:
             - true
     cache:
-        directories:
-            - 'src/'
+        disable: true
     tests:
         override:
             -
