--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,7 @@
   "description": "Uniplaces' CI config",
   "require": {
       "php": ">=5.3.2",
-      "symfony/process": "2.0.10"
+      "symfony/process": "2.6.*"
   },
   "require-dev": {
     "phpunit/phpunit": "~4",
