--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,7 @@
   },
   "require-dev": {
     "phpunit/phpunit": "~4",
-    "squizlabs/php_codesniffer": "~2",
+    "squizlabs/php_codesniffer": "^2.6",
     "phpmd/phpmd": "~2",
     "pdepend/pdepend": "~2",
     "sebastian/phpcpd": "~2",
