--- a/composer.json
+++ b/composer.json
@@ -1,25 +1,32 @@
 {
-  "name": "uniplaces/ci-configs",
-  "license": "MIT",
-  "type": "library",
-  "description": "Uniplaces' CI config",
-  "require": {
-      "php": ">=5.3.2",
-      "symfony/process": ">=2.8.0"
-  },
-  "require-dev": {
-    "phpunit/phpunit": "~4",
-    "squizlabs/php_codesniffer": "^2.6",
-    "phpmd/phpmd": "~2",
-    "pdepend/pdepend": "~2",
-    "sebastian/phpcpd": "~2",
-    "mockery/mockery": "0.9.*",
-    "phploc/phploc": "2.*",
-    "satooshi/php-coveralls": "dev-master",
-    "knplabs/gaufrette": "dev-master"
-  },
-  "autoload": {
-    "psr-0": { "": "src/" },
-    "classmap": ["src/Uniplaces/Phpcs/Standards/Uniplaces/"]
-  }
+    "name": "uniplaces/ci-configs",
+    "license": "MIT",
+    "type": "library",
+    "description": "Uniplaces' CI config",
+    "require": {
+        "php": ">=5.3.2",
+        "symfony/process": ">=2.8.0"
+    },
+    "require-dev": {
+        "phpunit/phpunit": "~4",
+        "squizlabs/php_codesniffer": "^2.6",
+        "phpmd/phpmd": "~2",
+        "pdepend/pdepend": "~2",
+        "sebastian/phpcpd": "~2",
+        "mockery/mockery": "0.9.*",
+        "phploc/phploc": "2.*",
+        "satooshi/php-coveralls": "dev-master",
+        "knplabs/gaufrette": "dev-master"
+    },
+    "config": {
+        "bin-dir": "bin"
+    },
+    "autoload": {
+        "psr-0": {
+            "": "src/"
+        },
+        "classmap": [
+            "src/Uniplaces/Phpcs/Standards/Uniplaces/"
+        ]
+    }
 }
