--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -2,25 +2,26 @@
 
 <!-- http://www.phpunit.de/manual/current/en/appendixes.configuration.html -->
 <phpunit
-        backupGlobals               = "false"
-        backupStaticAttributes      = "false"
-        colors                      = "true"
-        convertErrorsToExceptions   = "true"
-        convertNoticesToExceptions  = "true"
-        convertWarningsToExceptions = "true"
-        processIsolation            = "false"
-        stopOnFailure               = "false"
-        syntaxCheck                 = "false"
-        bootstrap                   = "bootstrap.php"
+    backupGlobals="false"
+    backupStaticAttributes="false"
+    colors="true"
+    convertErrorsToExceptions="true"
+    convertNoticesToExceptions="true"
+    convertWarningsToExceptions="true"
+    processIsolation="false"
+    stopOnFailure="false"
+    syntaxCheck="false"
+    bootstrap="bootstrap.php"
 >
 
     <testsuites>
-        <testsuite name="Project Test Suite">
+        <testsuite name="Uniplaces Test Suite">
             <directory>src/Uniplaces/*/Tests</directory>
+            <directory>src/Uniplaces/*/*/Tests</directory>
             <directory>src/Uniplaces/*/*/*/Tests</directory>
+            <directory>src/Uniplaces/*/*/*/*/Tests</directory>
         </testsuite>
     </testsuites>
-
 
     <listeners>
         <listener class="PHPUnit\Runner\CleverAndSmart\TestListener">
@@ -30,14 +31,10 @@
                         <string>/tmp/.phpunit-cas.db</string>
                     </arguments>
                 </object>
-		<string>error_only</string>
+                <string>error_only</string>
             </arguments>
         </listener>
     </listeners>
-
-    <php>
-        <server name="KERNEL_DIR" value="app" />
-    </php>
 
     <filter>
         <whitelist>
@@ -52,5 +49,4 @@
     <logging>
         <log type="coverage-clover" target="docs/phpunit/clover.xml"/>
     </logging>
-
 </phpunit>
