--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -22,4 +22,18 @@
             <directory>src/Uniplaces/*/*/*/*/Tests</directory>
         </testsuite>
     </testsuites>
+
+    <logging>
+        <log type="coverage-text" target="php://stdout" showUncoveredFiles="false"/>
+    </logging>
+    <filter>
+        <blacklist>
+            <directory>vendor</directory>
+            <directory>tests</directory>
+            <directory>src/Uniplaces/Phpcs/Standards/Uniplaces/Tests</directory>
+        </blacklist>
+        <whitelist>
+            <directory suffix=".php">src/Uniplaces/Phpcs/Standards/Uniplaces/Sniffs</directory>
+        </whitelist>
+    </filter>
 </phpunit>
