--- a/circle.yml
+++ b/circle.yml
@@ -3,6 +3,7 @@ machine:
     version: 7.0.4
 dependencies:
   pre:
+    - sed -i 's/^;//' ~/.phpenv/versions/$(phpenv global)/etc/conf.d/xdebug.ini
     - echo "memory_limit = 3g" > ~/.phpenv/versions/$(phpenv global)/etc/conf.d/memory.ini
     - echo "xdebug.max_nesting_level = 1000" >> ~/.phpenv/versions/$(phpenv global)/etc/conf.d/xdebug.ini
     - composer config -g github-oauth.github.com 462a449f0f796fdba97ba417164c32d24ca36661
