--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -2,55 +2,38 @@
 
 <!-- http://www.phpunit.de/manual/current/en/appendixes.configuration.html -->
 <phpunit
-        backupGlobals               = "false"
-        backupStaticAttributes      = "false"
-        colors                      = "true"
-        convertErrorsToExceptions   = "true"
-        convertNoticesToExceptions  = "true"
-        convertWarningsToExceptions = "true"
-        processIsolation            = "false"
-        stopOnFailure               = "false"
-        syntaxCheck                 = "false"
-        bootstrap                   = "bootstrap.php"
+    backupGlobals="false"
+    backupStaticAttributes="false"
+    colors="true"
+    convertErrorsToExceptions="true"
+    convertNoticesToExceptions="true"
+    convertWarningsToExceptions="true"
+    processIsolation="false"
+    stopOnFailure="false"
+    syntaxCheck="false"
+    bootstrap="bootstrap.php"
 >
 
     <testsuites>
-        <testsuite name="Project Test Suite">
+        <testsuite name="Uniplaces Test Suite">
             <directory>src/Uniplaces/*/Tests</directory>
+            <directory>src/Uniplaces/*/*/Tests</directory>
             <directory>src/Uniplaces/*/*/*/Tests</directory>
+            <directory>src/Uniplaces/*/*/*/*/Tests</directory>
         </testsuite>
     </testsuites>
 
-
-    <listeners>
-        <listener class="PHPUnit\Runner\CleverAndSmart\TestListener">
-            <arguments>
-                <object class="PHPUnit\Runner\CleverAndSmart\Storage\Sqlite3Storage">
-                    <arguments>
-                        <string>/tmp/.phpunit-cas.db</string>
-                    </arguments>
-                </object>
-		<string>error_only</string>
-            </arguments>
-        </listener>
-    </listeners>
-
-    <php>
-        <server name="KERNEL_DIR" value="app" />
-    </php>
-
+    <logging>
+        <log type="coverage-text" target="php://stdout" showUncoveredFiles="false"/>
+    </logging>
     <filter>
+        <blacklist>
+            <directory>vendor</directory>
+            <directory>tests</directory>
+            <directory>src/Uniplaces/Phpcs/Standards/Uniplaces/Tests</directory>
+        </blacklist>
         <whitelist>
-            <directory>src/Uniplaces/</directory>
-            <exclude>
-                <directory>src/Uniplaces/Tests</directory>
-                <directory>src/Uniplaces/*/Tests</directory>
-            </exclude>
+            <directory suffix=".php">src/Uniplaces/Phpcs/Standards/Uniplaces/Sniffs</directory>
         </whitelist>
     </filter>
-
-    <logging>
-        <log type="coverage-clover" target="docs/phpunit/clover.xml"/>
-    </logging>
-
 </phpunit>
